[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-dev-claimcheck"
version = "0.1.0"
description = "Executa for the claimcheck Anna App"
requires-python = ">=3.10"

[project.scripts]
"tool-dev-claimcheck" = "claimcheck_plugin:main"

[tool.setuptools]
py-modules = ["claimcheck_plugin"]
